<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_import"
        android:orderInCategory="101"
        android:title="@string/action_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="102"
        android:title="@string/action_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="103"
        android:title="@string/action_clear"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>