<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013 Evgeniy NeoFusion
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_vertical_margin"
            android:layout_marginLeft="@dimen/dialog_horizontal_margin"
            android:layout_marginRight="@dimen/dialog_horizontal_margin"
            android:layout_marginTop="@dimen/dialog_vertical_margin">

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dialog_edit_name"
                android:inputType="text">

                <requestFocus />
            </EditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_vertical_margin"
            android:layout_marginLeft="@dimen/dialog_horizontal_margin"
            android:layout_marginRight="@dimen/dialog_horizontal_margin"
            android:layout_marginTop="@dimen/dialog_vertical_margin">

            <EditText
                android:id="@+id/editPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroupType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_vertical_margin"
            android:layout_marginLeft="@dimen/dialog_horizontal_margin"
            android:layout_marginRight="@dimen/dialog_horizontal_margin"
            android:layout_marginTop="@dimen/dialog_vertical_margin">

            <RadioButton
                android:id="@+id/radioSingle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_edit_radio_single" />

            <RadioButton
                android:id="@+id/radioPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_edit_radio_path" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBoxSu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_vertical_margin"
            android:layout_marginLeft="@dimen/dialog_horizontal_margin"
            android:layout_marginRight="@dimen/dialog_horizontal_margin"
            android:layout_marginTop="@dimen/dialog_vertical_margin"
            android:text="@string/dialog_edit_checkbox" />

    </LinearLayout>

</ScrollView>